[gd_scene load_steps=5 format=3 uid="uid://s0a60icooh80"]

[ext_resource type="Texture2D" uid="uid://ck7dyq4wenuh1" path="res://gfx/ui/gui/background3.png" id="1_3xigs"]
[ext_resource type="Texture2D" uid="uid://dstrgdyjjnbja" path="res://gfx/ui/buttons/buttons_1x.png" id="2_7aygi"]
[ext_resource type="Script" path="res://scripts/load.gd" id="2_kwscx"]
[ext_resource type="Theme" uid="uid://chvahglekuifq" path="res://gui_theme.tres" id="3_ueu0h"]

[node name="Load" type="Node2D"]
script = ExtResource("2_kwscx")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.443137, 0.286275, 0.32549, 0.85098)
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(6.4, 3.6)
texture = ExtResource("1_3xigs")
expand_mode = 1

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 37.0
offset_top = 25.0
offset_right = 345.0
offset_bottom = 195.0
scale = Vector2(0.7, 0.7)

[node name="Game1" type="Button" parent="Control"]
layout_mode = 0
offset_left = 47.1429
offset_top = 8.57143
offset_right = 213.142
offset_bottom = 40.5714
theme = ExtResource("3_ueu0h")
text = "Game 1"

[node name="Game2" type="Button" parent="Control"]
offset_left = 47.1429
offset_top = 52.8571
offset_right = 213.142
offset_bottom = 84.8571
theme = ExtResource("3_ueu0h")
text = "Game 2"

[node name="Game3" type="Button" parent="Control"]
layout_mode = 0
offset_left = 48.5714
offset_top = 95.7143
offset_right = 214.571
offset_bottom = 126.714
theme = ExtResource("3_ueu0h")
text = "Game 3"

[node name="Back" type="Button" parent="."]
offset_left = 16.0
offset_top = 120.0
offset_right = 32.0
offset_bottom = 136.0

[node name="Cross" type="Sprite2D" parent="Back"]
position = Vector2(8, 8)
scale = Vector2(2, 2)
texture = ExtResource("2_7aygi")
hframes = 16
vframes = 2
frame = 11

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/level_multiplayer.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="Control/Game1" to="." method="_on_game_1_pressed"]
[connection signal="pressed" from="Control/Game2" to="." method="_on_game_2_pressed"]
[connection signal="pressed" from="Control/Game3" to="." method="_on_game_3_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
